Name:                bindings-linux-videodev2
Version:             0.1
Synopsis:            bindings to Video For Linux Two (v4l2) kernel interfaces

Description:         Low-level bindings to /usr/include/linux/videodev2.h

Homepage:            https://gitorious.org/hsv4l2
License:             BSD3
License-file:        LICENSE
Author:              Claude Heiland-Allen
Maintainer:          claudiusmaximus@goto10.org
Category:            Graphics

Build-type:          Simple

Extra-source-files:
  README
  generate/generate.sh
  generate/videodev2.h.diff
  Bindings/Linux/videodev2.h

Cabal-version:       >=1.2

Library
  Exposed-modules:     Bindings.Linux.VideoDev2
  C-sources:           Bindings/Linux/videodev2_cinline.c
  Include-dirs:        Bindings/Linux/
  Build-depends:
    base >= 3 && < 5,
    bindings-DSL >= 1.0.7 && < 1.1,
    ioctl >= 0.0.1 && < 0.1
  Build-tools:         hsc2hs
  
